Project

General

Profile

Actions

Bug #46264

closed

mon: check for mismatched daemon versions

Added by Tyler Sheehan almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There is currently no test to check if the daemon are all running the same version of ceph


Related issues 1 (1 open0 closed)

Related to CephFS - Feature #24462: MDSMonitor: check for mixed version MDSNew

Actions
Actions #1

Updated by Sebastian Wagner almost 4 years ago

Hm. what do yo expect? Upgrade scenarios can become complicated with more than two versions running at the same time while doing an upgrade. What do you have in mind?

Actions #2

Updated by Tyler Sheehan almost 4 years ago

I have completed a function called check_daemon_version located in src/mon/Monitor.cc This function goes through mon_metadata checking the version of each daemon against the version of the first daemon, if there are any that do not match their rank is added to a map function and returned along with the value true, once returned the map is cycled through in src/mon/HealthMonitor.cc file function get_health_status() where the rank is used to get the name of each daemon and return them. Their is an if statement inside HealthMintor.cc that ensures even if check_daemon_version returns true the error message will only occur if a specific amount of time has passed and check_daemon_version returns true again.
If you wish to take a look at the code you can check the current pull request located here: https://github.com/ceph/ceph/pull/35876

Actions #3

Updated by Neha Ojha over 3 years ago

  • Project changed from Ceph to RADOS
  • Subject changed from mon:add test for daemon versions to mon:check for mismatched daemon versions
  • Category deleted (Monitor)
  • Status changed from New to Fix Under Review
  • Assignee set to Tyler Sheehan
  • Pull request ID set to 35876
Actions #4

Updated by David Zafman over 3 years ago

  • Assignee changed from Tyler Sheehan to David Zafman
Actions #5

Updated by David Zafman over 3 years ago

  • Pull request ID changed from 35876 to 36759
Actions #6

Updated by David Zafman over 3 years ago

  • Subject changed from mon:check for mismatched daemon versions to mon: check for mismatched daemon versions
Actions #7

Updated by David Zafman over 3 years ago

  • Status changed from Fix Under Review to In Progress
Actions #8

Updated by Patrick Donnelly over 3 years ago

  • Related to Feature #24462: MDSMonitor: check for mixed version MDS added
Actions #9

Updated by David Zafman over 3 years ago

Delay 7 days by default with a config value before health warning/error when detected.

Actions #10

Updated by David Zafman over 3 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF