mon: Add a function called check_daemon_versions

Fixes: https://tracker.ceph.com/issues/46264

Signed-off-by: Tyler <tyler_sheehan@student.uml.edu>

Made minor changes based on pull request comments

Signed-off-by: Tyler <tyler_sheehan@student.uml.edu>

Changed the way versions are checked along with some other minor modifications

Signed-off-by: Tyler <tyler_sheehan@student.uml.edu>

Made minor modification to the error message

Signed-off-by: Tyler <tyler_sheehan@student.uml.edu>

Modifications to include the hostname in the error message

Signed-off-by: Tyler <tyler_sheehan@student.uml.edu>